--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,4 +1,4 @@
-name: 'update'
+name: 'update tools'
 
 on:
   push
@@ -7,7 +7,7 @@ env:
   BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
 
 jobs:
-  compile:
+  update:
     runs-on: ubuntu-latest
     steps:
       - name: Print Branch
